WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
154032
Modern IDB: IDBOpenDBRequests leak
https://bugs.webkit.org/show_bug.cgi?id=154032
Summary
Modern IDB: IDBOpenDBRequests leak
Brady Eidson
Reported
2016-02-09 08:57:35 PST
Modern IDB: IDBOpenDBRequests leak There's a ref cycle between IDBTransaction and IDBOpenDBRequest. Breaking IDBTransaction's ref to the request is easy - *IF* the request is able to potentially manage the end of its own lifetime, which is tied to its final event dispatch. Doing that requires a new Event class that holds the final ref to the request.
Attachments
Patch v1
(13.99 KB, patch)
2016-02-09 09:21 PST
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2016-02-09 09:21:59 PST
Created
attachment 270934
[details]
Patch v1
WebKit Commit Bot
Comment 2
2016-02-09 09:40:45 PST
Comment on
attachment 270934
[details]
Patch v1 Clearing flags on attachment: 270934 Committed
r196313
: <
http://trac.webkit.org/changeset/196313
>
WebKit Commit Bot
Comment 3
2016-02-09 09:40:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug